+Added timer with viewmodel and databinding connection

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,8 +56,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.0.1'
 
     // Navigation
-    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
-    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0-rc02"
+    implementation "android.arch.navigation:navigation-ui-ktx:1.0.0-rc02"
 
+    // Lifecycles
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
 }
